<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    style="@style/MenuMainBackStyle"
    android:background="@color/menuBackgroundMain"

    >
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/menuSmallPadding"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            style="@style/SettingMainToolbarStyle">

            <TextView
                style="@style/MenuMainStyle"
                android:text="@string/app_name"
                />

        </androidx.appcompat.widget.Toolbar>

        <Button
            android:id="@+id/buttonSearch"
            style="@style/MenuButtonStyle"
            android:text="@string/menubuttonText1"
            app:icon="@drawable/search"
            />

        <Button
            android:id="@+id/buttonMedia"
            style="@style/MenuButtonStyle"
            android:text="@string/menubuttonText2"
            app:icon="@drawable/music_library"
            />

        <Button
            android:id="@+id/buttonSetting"
            style="@style/MenuButtonStyle"
            android:text="@string/setting"
            app:icon="@drawable/setting"
            />
    </LinearLayout>
</LinearLayout>