<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical">
    <Button
            android:id="@+id/buttonBackMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingHorizontal="@dimen/settingSmallPadding"
            android:paddingVertical="@dimen/settingMediumPadding"
            android:backgroundTint="@color/settingBackground"

            android:text="@string/setting"
            android:textSize="@dimen/settingTextSizeMain"
            android:textColor="@color/settingTextMain"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textAllCaps = "false"

            app:icon="@drawable/arrow_back"
            app:iconTint="@color/settingTextMain"
            app:iconGravity="textStart"
            />
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/textViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/settingBackground"

        android:paddingHorizontal="@dimen/settingSmallPadding"
        android:paddingVertical="@dimen/settingMediumPadding"

        android:text="@string/settingbuttonText1"
        android:textSize="@dimen/settingTextSize"
        android:textColor="@color/settingText"
        android:gravity="center_vertical"

        android:checked="false"
        />
    <TextView
        android:id="@+id/textViewShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingHorizontal="@dimen/settingSmallPadding"
        android:paddingVertical="@dimen/settingMediumPadding"
        android:backgroundTint="@color/settingBackground"

        android:text="@string/settingbuttonText2"
        android:textColor="@color/settingText"
        android:textSize="@dimen/settingTextSize"
        android:gravity="center_vertical"

        app:drawableEndCompat="@drawable/share"
        app:drawableTint="@color/settingIcon"
        />
    <TextView
        android:id="@+id/buttonHelper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingHorizontal="@dimen/settingSmallPadding"
        android:paddingVertical="@dimen/settingMediumPadding"
        android:backgroundTint="@color/settingBackground"

        android:text="@string/settingbuttonText3"
        android:textColor="@color/settingText"
        android:textSize="@dimen/settingTextSize"
        android:gravity="center_vertical"

        app:drawableEndCompat="@drawable/support"
        app:drawableTint="@color/settingIcon"
        />
    <TextView
        android:id="@+id/buttonUserText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingHorizontal="@dimen/settingSmallPadding"
        android:paddingVertical="@dimen/settingMediumPadding"
        android:backgroundTint="@color/settingBackground"

        android:text="@string/settingbuttonText4"
        android:textColor="@color/settingText"
        android:textSize="@dimen/settingTextSize"
        android:gravity="center_vertical"

        app:drawableEndCompat="@drawable/vector"
        app:drawableTint="@color/settingIcon"
        />
</LinearLayout>