<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:theme="@style/Media_library.Theme"
    tools:context=".ui.fragment.MediaLibraryFragment"

    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/buttonBack"
        style="@style/MediaLibraryButtonBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <TextView
            style="@style/MediaLibrary.ButtonBackText"
            android:text="@string/mediaLibraryName" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabIndicatorColor="?attr/colorSecondary"
        app:tabIndicatorHeight="2dp"
        app:tabPadding="16dp"
        app:tabIndicatorFullWidth="true"
        app:tabSelectedTextColor="?attr/colorSecondary">


        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/mediaLibrarySelectedTracks"
            android:textColor="?attr/colorSecondary"
            android:textSize="14sp" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/mediaLibraryPlaylists"
            android:textColor="?attr/colorSecondary"
            android:textSize="14sp" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_ml"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/media_library_navigation_graph"
        tools:layout="@layout/fragment_ml_favorite_tracks" />



</LinearLayout>